# agent-git

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  install-shadow.sh  package.json  rust-toolchain.toml
.github/: RELEASE_ARTIFACTS.md
.github/workflows/: ci.yml  pages.yml  pg.yml  release.yml
.playwright-mcp/: page-2026-07-16T21-06-15-491Z.yml  page-2026-07-16T21-06-36-906Z.yml  page-2026-07-16T21-06-49-952Z.yml  page-2026-07-16T21-06-58-249Z.yml  page-2026-07-16T21-07-06-999Z.yml  page-2026-07-16T21-07-44-968Z.yml  page-2026-07-16T21-08-11-118Z.yml  page-2026-07-16T21-08-15-251Z.yml  page-2026-07-16T21-08-49-150Z.yml  page-2026-07-16T21-09-04-154Z.yml  page-2026-07-16T21-09-13-108Z.yml
demo/: README.md  hub-e2e.sh  lib.sh  state.sh  verify.sh
demo/01-init/: README.md  expect.txt  setup.sh
demo/01-two-stores/: README.md  expect.txt  setup.sh
demo/02-claim/: README.md  expect.txt  setup.sh
demo/02-import/: README.md  expect.txt  setup.sh
demo/03-facts/: README.md  expect.txt  setup.sh
demo/03-stale/: README.md  expect.txt  setup.sh
demo/04-merge/: README.md  expect.txt  setup.sh
demo/05-diff/: README.md  expect.txt  setup.sh
demo/05-workspace/: README.md  expect.txt  setup.sh
demo/06-fork-reset/: README.md  expect.txt  setup.sh
demo/06-secrets/: README.md  expect.txt  setup.sh
demo/07-remote/: README.md  expect.txt  setup.sh
demo/07-secrets/: README.md  expect.txt  setup.sh
demo/08-remote/: README.md  expect.txt  setup.sh
demo/seed/: env.seed
demo/seed/docs/: api-v1.md
demo/seed/models/: user.ts
demo/seed/services/: auth.ts  order.ts  refund.ts
demo/showcase/: README.md  host-script.md  rehearse.sh  setup.sh  讲稿.md
deploy/: Caddyfile  agit-hub.service  docker-compose.yml  garage.toml
docs/: _config.yml  agit-v1-schema-draft.md  architecture-v2.md  architecture.md  competitive-analysis.md  demo-walkthrough.md  deploying-the-hub.md  hub.md  index.md  shepherd-survey.md  使用介绍.md  使用说明.md  风险分析.md
docs/guide/: capture.md  command-reference.md  concepts.md  configuration.md  merging.md  migration.md  provenance.md  quickstart.md  resume.md  runtimes.md  secrets.md  security.md  sharing.md
docs/plans/: 2026-07-15-claude-codex-conversion-design.md  2026-07-16-harness-versioning-design.md  2026-07-16-workspace-state-primitives-design.md  2026-07-17-agent-identity-and-handoff-design.md  2026-07-20-encryption-recipients-design.md  2026-07-21-git-native-committer-identity-design.md  2026-07-21-hub-org-and-repo-views-design.md  2026-07-22-coherent-divergence-model-design.md  2026-07-22-debug-info-collection-design.md  2026-07-22-key-auth-credential-helper-design.md  2026-07-23-off-cwd-session-attribution-design.md
docs/zh/: deploying-the-hub.md  hub.md  index.md
docs/zh/guide/: capture.md  command-reference.md  concepts.md  configuration.md  merging.md  migration.md  provenance.md  quickstart.md  resume.md  runtimes.md  secrets.md  sharing.md
hub-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
hub-ui/src/: App.tsx  index.css
hub-ui/src/components/: CopyButton.tsx  Crumb.tsx  ErrorBoundary.tsx  InvitationsInbox.tsx  Layout.tsx  Markdown.tsx  ProvChips.tsx  ProvenanceBadge.tsx  SessionCard.tsx  Spine.tsx  States.tsx  Transcript.tsx
hub-ui/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input-otp.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  table.tsx
hub-ui/src/lib/: api.ts  session.tsx  useAsync.ts  useGuarded.ts
hub-ui/src/pages/: Account.tsx  Admin.tsx  Agent.tsx  Audit.tsx  Diff.tsx  Home.tsx  Login.tsx  MrDetail.tsx  Mrs.tsx  NewAgent.tsx  OrgDetail.tsx  Orgs.tsx  Register.tsx  Repos.tsx  ResetPassword.tsx  Session.tsx  Settings.tsx  Tokens.tsx  orgs-management.tsx
npm/: .gitignore  README.md  install.js  shim-hub.js  shim.js
npm/lib/: config.js  download.js  extract.js  log.js  platform.js  run.js
scripts/: hub-crypt-e2e.sh  hub-live-e2e.sh
src/: agent.rs  align.rs  claim.rs  commands.rs  convo.rs  credential.rs  crypt.rs  debug.rs  environment.rs  evidence.rs  extract.rs  facts.rs  gitx.rs  harness.rs  hubapi.rs  init.rs  keybox.rs  lib.rs  llm.rs  main.rs  merge.rs  output.rs  passthrough.rs  register.rs  scan.rs  scope.rs  session.rs  shadow.rs  summarize.rs  sync.rs  ui.rs  validate.rs  view.rs  workspace.rs
src/adapter/: claude_code.rs  codex.rs  mod.rs
src/hub/: acl.rs  audit.rs  auth.rs  blob.rs  identity.rs  kdf.rs  metrics.rs  mod.rs  mr.rs  net.rs  session.rs  store.rs  totp.rs
tests/: adapter.rs  cli.rs  crypt.rs  hub_password.rs  merge.rs  purge_history.rs  store_lock.rs
website/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/cli/: _category_.json  capturing.md  command-reference.md  configuration.md  diagnostics.md  divergence.md  encryption.md  identity.md  merging.md  overview.md  relocating.md  resuming.md  runtimes.md  secrets.md
website/docs/get-started/: _category_.json  concepts.md  install.md  introduction.md  quickstart.md
website/docs/hub/: _category_.json  accounts.md  organizations.md  overview.md  reading-a-session.md  reporting-problems.md  repositories.md  signing-keys.md  tokens.md
website/docs/integration/: _category_.json  authentication.md  connect-cli-to-hub.md  provenance.md  sharing.md
website/docs/self-hosting/: _category_.json  backup-restore.md  configuration.md  deploying.md  operations.md
website/i18n/zh-Hans/docusaurus-plugin-content-docs/: current.json
website/i18n/zh-Hans/docusaurus-plugin-content-docs/current/cli/: capturing.md  command-reference.md  configuration.md  diagnostics.md  divergence.md  encryption.md  identity.md  merging.md  overview.md  relocating.md  resuming.md  runtimes.md  secrets.md
website/i18n/zh-Hans/docusaurus-plugin-content-docs/current/get-started/: concepts.md  install.md  introduction.md  quickstart.md
website/i18n/zh-Hans/docusaurus-theme-classic/: footer.json  navbar.json
website/src/css/: custom.css
(+16 files in other folders)
