[package]
name = "agit"
version = "0.1.0"
edition = "2021"
description = "Git for agent context: version raw agent session dumps, sync with your team, LLM-merge on pull."
license = "MIT"

[lib]
name = "agit"
path = "src/lib.rs"

[[bin]]
name = "agit"
path = "src/main.rs"

[[bin]]
name = "agit-hub"
path = "src/bin/agit-hub/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "io-util", "signal", "sync", "time"] }
# Persistence: Postgres (production) + SQLite (self-host, tests) behind the Store. RUNTIME queries
# only — the `macros` feature is deliberately omitted so the build is hermetic (no live DB at compile).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
tower = { version = "0.5", features = ["limit", "util"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
# S3-compatible object storage for the hub's content-addressed blob store (Garage in production). A
# single self-contained async client — far lighter than aws-sdk-s3 (no aws-config/smithy stack) — that
# cleanly does path-style S3 against Garage. `tokio-rustls-tls` (default features off) keeps the build
# hermetic (no system OpenSSL). Always compiled, only instantiated when AGIT_HUB_S3_ENDPOINT is set.
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
anyhow = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
walkdir = "2"
once_cell = "1"
argon2 = "0.5.3"
# Client-side provenance: a per-machine ed25519 identity signs each captured session.
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
# Opt-in at-rest encryption of the agent store (Feature C). A convergent git clean/smudge filter:
# XChaCha20-Poly1305 AEAD (pure-Rust, hermetic — matches the tokio-rustls / no-system-OpenSSL stance),
# with the nonce derived deterministically from the plaintext (HMAC-SHA256) so the clean filter is a
# pure function and git never sees the working tree as perpetually modified. HKDF splits the 32-byte
# master into domain-separated K_enc / K_mac. sha2/hex/rand are already dependencies above.
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
