[package]
name = "agit"
version = "0.2.0"
edition = "2021"
description = "Git for agent context: version raw agent session dumps, sync with your team, LLM-merge on pull."
license = "MIT"

[lib]
name = "agit"
path = "src/lib.rs"

[[bin]]
name = "agit"
path = "src/main.rs"

[[bin]]
name = "agit-hub"
path = "src/bin/agit-hub/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "io-util", "signal", "sync", "time"] }
# Persistence: Postgres (production) + SQLite (self-host, tests) behind the Store. RUNTIME queries
# only — the `macros` feature is deliberately omitted so the build is hermetic (no live DB at compile).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
tower = { version = "0.5", features = ["limit", "util"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
# S3-compatible object storage for the hub's content-addressed blob store (Garage in production). A
# single self-contained async client — far lighter than aws-sdk-s3 (no aws-config/smithy stack) — that
# cleanly does path-style S3 against Garage. `tokio-rustls-tls` (default features off) keeps the build
# hermetic (no system OpenSSL). Always compiled, only instantiated when AGIT_HUB_S3_ENDPOINT is set.
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
anyhow = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
walkdir = "2"
once_cell = "1"
argon2 = "0.5.3"
# TOTP (RFC 6238) second factor for agit-hub. A well-reviewed, RFC-compliant crate — no hand-rolled
# OTP. `default-features = false` keeps the build hermetic: `otpauth` pulls only the pure-Rust `url`
# crate (provisioning-URI generation), `gen_secret` the CSPRNG secret generator. The `qr`/`image`
# features are deliberately NOT enabled (they drag in an image encoder we do not want).
totp-rs = { version = "5", default-features = false, features = ["otpauth", "gen_secret"] }
# Client-side provenance: a per-machine ed25519 identity signs each captured session.
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
# git-parity: reset the SIGPIPE disposition to SIG_DFL at startup so piping long native output into
# head/less/grep -m1 terminates cleanly (like git) instead of Rust's default panic on EPIPE
# ("failed printing to stdout: Broken pipe"). Already a transitive dep; pinned directly for the call.
libc = "0.2"
# Encryption-recipients Wave 1: derive an X25519 encryption keypair from the same ed25519 identity
# secret via the standard ed25519->curve25519 (Edwards->Montgomery) map. Already a transitive dep (of
# ed25519-dalek); pinned directly so the clamp/basepoint helpers (`clamp_integer`, `X25519_BASEPOINT`,
# `mul_clamped`, `EdwardsPoint::to_montgomery`) are used from the library rather than hand-rolled.
curve25519-dalek = "4"
# Minimal blocking HTTP client for the `agit identity` commands (enroll/lookup against the hub's JSON
# API). rustls only (default-features off) to match the hermetic no-system-OpenSSL stance the rest of
# the build takes (rust-s3/tokio-rustls). The server (agit-hub) keeps its hand-rolled http layer; this
# is the client half, which previously had no HTTP client at all.
ureq = { version = "3", default-features = false, features = ["rustls"] }
# Opt-in at-rest encryption of the agent store (Feature C). A convergent git clean/smudge filter:
# XChaCha20-Poly1305 AEAD (pure-Rust, hermetic — matches the tokio-rustls / no-system-OpenSSL stance),
# with the nonce derived deterministically from the plaintext (HMAC-SHA256) so the clean filter is a
# pure function and git never sees the working tree as perpetually modified. HKDF splits the 32-byte
# master into domain-separated K_enc / K_mac. sha2/hex/rand are already dependencies above.
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
# Observability for agit-hub: structured logging via `tracing`, with an env-driven subscriber
# (`AGIT_HUB_LOG` filter, `AGIT_HUB_LOG_FORMAT=json|pretty`). `tracing-subscriber` default features
# already carry `fmt`, `ansi`, and `env-filter`; `json` is opted in for the JSON log format. Metrics
# are hand-rolled on atomics (src/hub/metrics.rs) — no metrics crate is pulled in.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
